fixing whitespace

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,5 @@
 
-html,body
-{
+* {
     width: 100%;
     height: 100%;
     margin: 0px;
@@ -38,7 +37,7 @@ html,body
 }
 
 #techword {
-  position: relative;
+  position: absolute;
   margin-left: 46%;
   margin-top: 400px;
   color: white;
@@ -71,7 +70,7 @@ html,body
 
 #cthrew {
   background: rgb(0,0,0);
-  background: rgba(0,0,0,0.3);
+  background: rgba(0,0,0,0.4);
   padding: 0 5px;
 }
 
